--- a/index.css
+++ b/index.css
@@ -84,8 +84,8 @@ body{
 
 .image1{
     height: 500px;
-    padding: 40px;
-    padding-left: 120px;
+    padding: 60px;
+/*     padding-left: 120px; */
 }
 .bottom-text{
     padding:40px;
